manifest.jsonのアプリ名と説明を更新し、背景色とテーマ色を変更。アイコンのパスを修正。robots.txtのSitemap行を整形し、sitemap.xmlの最終更新日を2025年6月8日に変更。

--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,21 @@
 {
-    "name": "子供の習い事診断 Pro",
-    "short_name": "習い事診断Pro",
-    "description": "お子様にぴったりの習い事を見つけよう",
+    "name": "子供の習い事診断",
+    "short_name": "習い事診断", 
+    "description": "お子様にぴったりの習い事を診断",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#f8fafc",
-    "theme_color": "#6366f1",
+    "background_color": "#ffffff",
+    "theme_color": "#4f46e5",
     "icons": [
       {
-        "src": "assets/favicon-192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
+        "src": "favicon-192.png",
+        "sizes": "192x192", 
+        "type": "image/png"
       },
       {
-        "src": "assets/favicon-512.png", 
+        "src": "favicon-512.png",
         "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "any maskable"
+        "type": "image/png"
       }
     ]
   }
